--- a/a.html
+++ b/a.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
   </head>
-  <body background="ttt.jpg">
+  <body>
     <header class="header">
       <a href="" class="logo">Portfolio.</a>
       <nav class="navbar">
@@ -48,7 +48,7 @@
         <div class="overlay"></div>
       </div>
       <div class="home-img">
-        <img src="" alt="" />
+        <img src="u.jpg" alt="" />
       </div>
     </section>
     <script src="a.js"></script>
